backend/manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: budgetah-backend
spec:
  selector:
    app: budgetah-backend
  ports:
    - port: 8000
      targetPort: 8000
